demo1/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpd
  labels:
    deployment: httpd
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  sessionAffinity: None
  selector:
    deployment: httpd
