demo1/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
